--- a/app/src/main/res/layout/activity_add_stats.xml
+++ b/app/src/main/res/layout/activity_add_stats.xml
@@ -5,149 +5,153 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AddStatsActivity">
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_margin="10dp"
         >
-        <androidx.appcompat.widget.AppCompatTextView
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/add_stats_title"
             android:textSize="40sp"
             android:gravity="center"/>
-        <GridLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:rowCount="4"
-            android:columnCount="3"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:orientation="vertical">
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+                <Button
+                    android:id="@+id/add_stat1"
+                    android:layout_height="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:text="@string/action1"
+                    android:layout_margin="10dp"
+                    android:maxLines="2"/>
+                <Button
+                    android:id="@+id/add_stat2"
+                    android:layout_height="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:text="@string/action2"
+                    android:layout_margin="10dp"
+                    android:maxLines="2"/>
+                <Button
+                    android:id="@+id/add_stat3"
+                    android:layout_height="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:text="@string/action5"
+                    android:layout_margin="10dp"
+                    android:maxLines="2"/>
+            </LinearLayout>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+                <Button
+                    android:id="@+id/add_stat4"
+                    android:layout_height="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:text="@string/action3"
+                    android:layout_margin="10dp"
+                    android:maxLines="2"/>
+                <Button
+                    android:id="@+id/add_stat5"
+                    android:layout_height="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:text="@string/action4"
+                    android:layout_margin="10dp"
+                    android:maxLines="2"/>
+                <Button
+                    android:id="@+id/add_stat6"
+                    android:layout_height="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:text="@string/action6"
+                    android:layout_margin="10dp"
+                    android:maxLines="2"/>
+            </LinearLayout>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+                <Button
+                    android:id="@+id/add_stat7"
+                    android:layout_height="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:text="@string/action7"
+                    android:layout_margin="10dp"
+                    android:maxLines="2"/>
+                <Button
+                    android:id="@+id/add_stat8"
+                    android:layout_height="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:text="@string/action8"
+                    android:layout_margin="10dp"
+                    android:maxLines="2"/>
+                <Button
+                    android:id="@+id/add_stat9"
+                    android:layout_height="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:text="@string/action9"
+                    android:layout_margin="10dp"
+                    android:maxLines="2"/>
+            </LinearLayout>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+                <Button
+                    android:id="@+id/add_stat10"
+                    android:layout_height="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:text="@string/action10"
+                    android:layout_margin="10dp"
+                    android:maxLines="2"/>
 
-            <Button
-                android:id="@+id/add_stat1"
-                android:layout_width="100dp"
-                android:layout_height="150dp"
-                android:layout_row="0"
-                android:layout_column="0"
-                android:layout_margin="10dp"
-                android:layout_gravity="center"
-                android:text="@string/action1"
-                android:maxLines="2"/>
-            <Button
-                android:id="@+id/add_stat2"
-                android:layout_height="150dp"
-                android:layout_width="100dp"
-                android:layout_row="0"
-                android:layout_column="1"
-                android:layout_gravity="center"
-                android:text="@string/action2"
-                android:layout_margin="10dp"
-                android:maxLines="2"/>
-            <Button
-                android:id="@+id/add_stat3"
-                android:layout_height="150dp"
-                android:layout_width="100dp"
-                android:layout_row="0"
-                android:layout_column="2"
-                android:layout_gravity="center"
-                android:text="@string/action5"
-                android:layout_margin="10dp"
-                android:maxLines="2"/>
-            <Button
-                android:id="@+id/add_stat4"
-                android:layout_height="150dp"
-                android:layout_width="100dp"
-                android:layout_row="1"
-                android:layout_column="0"
-                android:layout_gravity="center"
-                android:text="@string/action3"
-                android:layout_margin="10dp"
-                android:maxLines="2"/>
-            <Button
-                android:id="@+id/add_stat5"
-                android:layout_height="150dp"
-                android:layout_width="100dp"
-                android:layout_row="1"
-                android:layout_column="1"
-                android:layout_gravity="center"
-                android:text="@string/action4"
-                android:layout_margin="10dp"
-                android:maxLines="2"/>
-            <Button
-                android:id="@+id/add_stat6"
-                android:layout_height="150dp"
-                android:layout_width="100dp"
-                android:layout_row="1"
-                android:layout_column="2"
-                android:layout_gravity="center"
-                android:text="@string/action6"
-                android:layout_margin="10dp"
-                android:maxLines="2"/>
-
-            <Button
-                android:id="@+id/add_stat7"
-                android:layout_height="150dp"
-                android:layout_width="100dp"
-                android:layout_row="2"
-                android:layout_column="0"
-                android:layout_margin="10dp"
-                android:layout_gravity="center"
-                android:text="@string/action7"
-                android:maxLines="2"/>
-
-            <Button
-                android:id="@+id/add_stat8"
-                android:layout_height="150dp"
-                android:layout_width="100dp"
-                android:layout_row="2"
-                android:layout_column="1"
-                android:layout_margin="10dp"
-                android:layout_gravity="center"
-                android:text="@string/action8"
-                android:maxLines="2"/>
-            <Button
-                android:id="@+id/add_stat9"
-                android:layout_height="150dp"
-                android:layout_width="100dp"
-                android:layout_row="2"
-                android:layout_column="2"
-                android:layout_gravity="center"
-                android:text="@string/action9"
-                android:layout_margin="10dp"
-                android:maxLines="2"/>
-
-            <Button
-                android:id="@+id/add_stat10"
-                android:layout_height="150dp"
-                android:layout_width="100dp"
-                android:layout_row="3"
-                android:layout_column="0"
-                android:layout_margin="10dp"
-                android:layout_gravity="center"
-                android:text="@string/action10"
-                android:maxLines="2"/>
-
-            <Button
-                android:id="@+id/add_stat11"
-                android:layout_height="150dp"
-                android:layout_width="100dp"
-                android:layout_row="3"
-                android:layout_column="1"
-                android:layout_margin="10dp"
-                android:layout_gravity="center"
-                android:text="@string/action11"
-                android:maxLines="2"/>
-            <Button
-                android:id="@+id/add_stat12"
-                android:layout_height="150dp"
-                android:layout_width="100dp"
-                android:layout_row="3"
-                android:layout_column="2"
-                android:layout_gravity="center"
-                android:text="@string/action12"
-                android:layout_margin="10dp"
-                android:maxLines="2"/>
-        </GridLayout>
-    </androidx.appcompat.widget.LinearLayoutCompat>
+                <Button
+                    android:id="@+id/add_stat11"
+                    android:layout_height="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:text="@string/action11"
+                    android:layout_margin="10dp"
+                    android:maxLines="2"/>
+                <Button
+                    android:id="@+id/add_stat12"
+                    android:layout_height="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:text="@string/action12"
+                    android:layout_margin="10dp"
+                    android:maxLines="2"/>
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
