--- a/app/src/main/res/layout/activity_view_games.xml
+++ b/app/src/main/res/layout/activity_view_games.xml
@@ -15,15 +15,30 @@
         android:layout_weight="1"
         android:gravity="center"
         android:text="@string/leagueName"
+        android:textColor="#000000"
         android:textSize="40sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
+    <TextView
+        android:id="@+id/choosegame"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/choose"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/league" />
+
     <ScrollView
+        android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/league"
+        android:layout_margin="2dp"
+        android:scrollbarAlwaysDrawHorizontalTrack="false"
+        android:scrollbarAlwaysDrawVerticalTrack="true"
+        android:verticalScrollbarPosition="right"
+        app:layout_constraintTop_toBottomOf="@+id/choosegame"
         tools:layout_editor_absoluteX="0dp">
 
         <LinearLayout
