--- a/app/src/main/res/layout/activity_chose_player.xml
+++ b/app/src/main/res/layout/activity_chose_player.xml
@@ -176,114 +176,97 @@
             android:layout_alignParentEnd="true"
             />
 
-        <GridLayout
-            android:id="@+id/grid"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/quarter"
-            android:columnCount="2"
-            android:rowCount="5">
+        <Button
+            android:id="@+id/chose_player_button1"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_below="@id/live"
+            android:layout_alignStart="@id/team1"
+            android:background="@drawable/round_button_1"
+            android:text="@string/player1" />
 
-            <Button
-                android:id="@+id/chose_player_button1"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginEnd="50dp"
-                android:layout_marginStart="75dp"
-                android:layout_row="0"
-                android:layout_column="0"
-                android:background="@drawable/round_button_1"
-                android:text="@string/player1" />
+        <Button
+            android:id="@+id/chose_player_button2"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_below="@id/chose_player_button5"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/round_button_2"
+            android:text="@string/player1" />
 
-            <Button
-                android:id="@+id/chose_player_button2"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_row="0"
-                android:layout_column="1"
-                android:background="@drawable/round_button_2"
-                android:text="@string/player1" />
+        <Button
+            android:id="@+id/chose_player_button3"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_below="@+id/live"
+            android:layout_alignEnd="@id/team2"
+            android:background="@drawable/round_button_1"
+            android:text="@string/player2" />
 
-            <Button
-                android:id="@+id/chose_player_button3"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginEnd="50dp"
-                android:layout_marginStart="75dp"
-                android:layout_row="1"
-                android:layout_column="0"
-                android:background="@drawable/round_button_1"
-                android:text="@string/player2" />
+        <Button
+            android:id="@+id/chose_player_button4"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_below="@id/chose_player_button5"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/round_button_2"
+            android:text="@string/player2" />
 
-            <Button
-                android:id="@+id/chose_player_button4"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_row="1"
-                android:layout_column="1"
-                android:background="@drawable/round_button_2"
-                android:text="@string/player2" />
+        <Button
+            android:id="@+id/chose_player_button5"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_below="@id/chose_player_button1"
+            android:layout_toEndOf="@id/chose_player_button1"
+            android:background="@drawable/round_button_1"
+            android:text="@string/player3" />
 
-            <Button
-                android:id="@+id/chose_player_button5"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginEnd="50dp"
-                android:layout_marginStart="75dp"
-                android:layout_row="2"
-                android:layout_column="0"
-                android:background="@drawable/round_button_1"
-                android:text="@string/player3" />
+        <Button
+            android:id="@+id/chose_player_button6"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_below="@id/chose_player_button5"
+            android:layout_alignEnd="@+id/team2"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/round_button_2"
+            android:text="@string/player3" />
 
-            <Button
-                android:id="@+id/chose_player_button6"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_row="2"
-                android:layout_column="1"
-                android:background="@drawable/round_button_2"
-                android:text="@string/player3" />
+        <Button
+            android:id="@+id/chose_player_button7"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_below="@id/chose_player_button1"
+            android:layout_toEndOf="@id/chose_player_button9"
+            android:background="@drawable/round_button_1"
+            android:text="@string/player4" />
 
-            <Button
-                android:id="@+id/chose_player_button7"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginEnd="50dp"
-                android:layout_marginStart="75dp"
-                android:layout_row="3"
-                android:layout_column="0"
-                android:background="@drawable/round_button_1"
-                android:text="@string/player4" />
+        <Button
+            android:id="@+id/chose_player_button8"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_below="@+id/chose_player_button2"
+            android:layout_toEndOf="@id/chose_player_button2"
+            android:background="@drawable/round_button_2"
+            android:text="@string/player4" />
 
-            <Button
-                android:id="@+id/chose_player_button8"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_row="3"
-                android:layout_column="1"
-                android:background="@drawable/round_button_2"
-                android:text="@string/player4" />
+        <Button
+            android:id="@+id/chose_player_button9"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_below="@id/live"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/round_button_1"
+            android:text="@string/player5" />
 
-            <Button
-                android:id="@+id/chose_player_button9"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginEnd="50dp"
-                android:layout_marginStart="75dp"
-                android:layout_row="4"
-                android:layout_column="0"
-                android:background="@drawable/round_button_1"
-                android:text="@string/player5" />
-
-            <Button
-                android:id="@+id/chose_player_button10"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_row="4"
-                android:layout_column="1"
-                android:background="@drawable/round_button_2"
-                android:text="@string/player5" />
-        </GridLayout>
+        <Button
+            android:id="@+id/chose_player_button10"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_below="@id/chose_player_button2"
+            android:layout_toEndOf="@id/chose_player_button4"
+            android:background="@drawable/round_button_2"
+            android:text="@string/player5" />
 
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
