--- a/app/src/main/res/layout/activity_view_games.xml
+++ b/app/src/main/res/layout/activity_view_games.xml
@@ -25,7 +25,7 @@
         android:id="@+id/choosegame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/choose"
+        android:text="Scheduled Games"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/league" />
@@ -57,6 +57,105 @@
                 android:text="@string/game1"
                 app:layout_constraintVertical_bias="0.025"
                 tools:layout_editor_absoluteX="0dp" />
+
+            <Button
+                android:id="@+id/game2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:text="@string/game1"
+                app:layout_constraintVertical_bias="0.025"
+                tools:layout_editor_absoluteX="0dp" />
+
+            <Button
+                android:id="@+id/game3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:text="@string/game1"
+                app:layout_constraintVertical_bias="0.025"
+                tools:layout_editor_absoluteX="0dp" />
+
+            <Button
+                android:id="@+id/game4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:text="@string/game1"
+                app:layout_constraintVertical_bias="0.025"
+                tools:layout_editor_absoluteX="0dp" />
+
+            <Button
+                android:id="@+id/game5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:text="@string/game1"
+                app:layout_constraintVertical_bias="0.025"
+                tools:layout_editor_absoluteX="0dp" />
+
+            <Button
+                android:id="@+id/game6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:text="@string/game1"
+                app:layout_constraintVertical_bias="0.025"
+                tools:layout_editor_absoluteX="0dp" />
+
+            <Button
+                android:id="@+id/game7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:text="@string/game1"
+                app:layout_constraintVertical_bias="0.025"
+                tools:layout_editor_absoluteX="0dp" />
+
+            <Button
+                android:id="@+id/game8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:text="@string/game1"
+                app:layout_constraintVertical_bias="0.025"
+                tools:layout_editor_absoluteX="0dp" />
+
+            <Button
+                android:id="@+id/game9"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:text="@string/game1"
+                app:layout_constraintVertical_bias="0.025"
+                tools:layout_editor_absoluteX="0dp" />
+
+            <Button
+                android:id="@+id/game10"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:text="@string/game1"
+                app:layout_constraintVertical_bias="0.025"
+                tools:layout_editor_absoluteX="0dp" />
+
+            <Button
+                android:id="@+id/game11"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:text="@string/game1"
+                app:layout_constraintVertical_bias="0.025"
+                tools:layout_editor_absoluteX="0dp" />
+
+            <Button
+                android:id="@+id/game12"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:text="@string/game1"
+                app:layout_constraintVertical_bias="0.025"
+                tools:layout_editor_absoluteX="0dp" />
         </LinearLayout>
 
     </ScrollView>
@@ -81,7 +180,6 @@
         android:text="@string/addNewGame"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="0.61" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
