--- a/app/src/main/res/layout/activity_coach_login.xml
+++ b/app/src/main/res/layout/activity_coach_login.xml
@@ -5,5 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CoachLoginActivity">
-
+    <LinearLayout
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Please Input Your Password"
+            android:textSize="20sp"/>
+        <EditText
+            android:id="@+id/editText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPassword"
+            android:gravity="center"
+            android:autofillHints="Password"/>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
