--- a/app/src/main/res/layout/activity_start_new_game.xml
+++ b/app/src/main/res/layout/activity_start_new_game.xml
@@ -9,6 +9,7 @@
         android:id="@+id/startNewTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="40sp"
         android:layout_gravity="center_horizontal"
         android:gravity="center"
         android:text="Start a New Game"
@@ -23,7 +24,7 @@
 
         <EditText
             android:id="@+id/team1"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_weight="0"
             android:gravity="start"
@@ -42,7 +43,7 @@
 
         <EditText
             android:id="@+id/team2"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:gravity="end"
             android:autofillHints="@string/team2"
@@ -53,8 +54,7 @@
     <Button
         android:id="@+id/addGame"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="0"
+        android:layout_height="100dp"
         android:text="@string/addGame" />
 
 </LinearLayout>
